[tool.poetry]
name = "graia-ptilopsis"
version = "0.0.1"
description = ""
authors = ["GreyElaina <31543961+GreyElaina@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "graia", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
graia-application-mirai = "0.1.1"
graia-broadcast = "^0.0.6"

[tool.poetry.dev-dependencies]
devtools = "^0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
